Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P3: Somewhat important
-
Resolution: Done
-
Affects Version/s: Qt Creator 3.3.0-beta1
-
Fix Version/s: Qt Creator 3.3.0-rc1
-
Component/s: Android Support
-
Labels:None
-
Commits:7f72b7bf6597f906c4f69a67a0aae5087d352a76
Description
Starting with Android 5.0 it seems we can not access the application files even if they should be accessible. It is a huge problem because QTC needs to "pull" the ping file from device in order to start the debug process.
Either we wait for Google to fix the problem (https://code.google.com/p/android/issues/detail?id=79478) or we need to find another solution (e.g. switch back to the old implementation, which doesn't need the ping pong file).
If we are going to fix the problem ourselves then we should find a solution before Qt 5.4.0 RC release.